--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,6 @@
 body {
   background-color: #0f172a;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .header {
@@ -49,33 +50,16 @@ body {
   }
 }
 
-/* General styles that apply to all screen sizes */
-/* General styles that apply to all screen sizes */
 .header {
-  /* Your existing styles for the header */
-
-  /* Example: Increase font size for larger screens */
   @media screen and (min-width: 768px) {
     h1 {
       font-size: 36px;
     }
   }
-
-  /* Example: Adjust grid layout for smaller screens */
   @media screen and (max-width: 800px) {
     .grid {
-      grid-template-columns: 1fr; /* Change to a single column layout */
+      grid-template-columns: 1fr; 
     }
   }
 
-  /* Additional responsive styles can be added here */
 }
-
-/* Responsive styles for specific elements or sections */
-
-/* Example: Apply different styles to the "My projects" text for smaller screens */
-// @media screen and (max-width: 800px) {
-//   .header .text-white.text-[18px] {
-//     font-size: 24px;
-//   }
-// }
